<resources>
    <string name="app_name">WLObs</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_login_too_short">This login is too short</string>
    <string name="error_login_too_long">This login is too long</string>
    <string name="error_login_invalid">Only letters and digits allowed</string>
    <string name="error_password_too_short">This password is too short</string>
    <string name="error_password_too_long">This password is too long</string>
    <string name="error_login_already_taken">Could not register, login already taken</string>
    <string name="error_invalid_credentials">Invalid login or password</string>
    <string name="network_error">Cannot connect to the server!</string>
    <string name="retry">RETRY</string>
    <string name="action_register">Register</string>
    <string name="registration_prompt">Not registered? Register now!</string>
    <string name="logging_in_prompt">Already registered? Log in now!</string>
    <string name="server_api_path" translatable="false">http://192.168.2.103:8080/</string>
    <string name="log_out">Log out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header" translatable="false">WLObs</string>
    <string name="navigation_votes_header">Votes</string>
    <string name="navigation_search_header">Search</string>
    <string name="navigation_observations_header">Observations</string>
    <string name="navigation_sub_header" translatable="false">Wild Life Observer</string>
    <string name="login_activity_label">Log in to WLObs</string>
    <string name="observations_last_sync_label">Last synchronization: </string>
    <string name="observations_last_sync_never">never</string>
    <string name="observations_sync_progress_message">Synchronization in progress…</string>
    <string name="error_sync_failed">Synchronization failed!</string>
    <string name="synchronization_button_description">Synchronization button</string>
    <string name="species_class_fish">fish</string>
    <string name="species_class_amphibian">amphibian</string>
    <string name="species_class_reptile">reptile</string>
    <string name="species_class_bird">bird</string>
    <string name="species_class_mammal">mammal</string>
    <string name="observation_item_votes_label">Votes:</string>
    <string name="observation_restriction_icon">observation restriction icon</string>
    <string name="vote_details_activity_header">Vote details</string>
    <string name="vote_details_date_voted">Date voted</string>
    <string name="vote_details_class_label">Class</string>
    <string name="vote_details_species_label">Species</string>
    <string name="vote_details_author_label">Observation author</string>
    <string name="vote_details_delete_label">Delete vote</string>
    <string name="vote_details_delete_confirmation">Do you really want to delete this vote?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="observation_details_header">Observation details</string>
    <string name="observation_details_vote_button_label">Vote</string>
    <string name="observation_details_delete_button_label">Delete observation</string>
    <string name="observation_details_restriction_label">Restricted</string>
    <string name="observation_details_number_of_votes_label">Number of votes</string>
    <string name="observation_details_species_label">Species</string>
    <string name="observation_details_species_class_label">Class</string>
    <string name="observation_details_author_label">Author</string>
    <string name="observation_details_date_label">Date</string>
    <string name="observation_details_delete_confirmation">Do you really want to delete this observation?</string>
    <string name="vote_details_vote_confirmation_label">Vote casted</string>
    <string name="observation_creation_header">New observation</string>
    <string name="new_observation_date_change_button_text">Change date</string>
    <string name="new_observation_save_button_text">Save</string>
    <string name="new_observation_restriction_label">Restrict observation</string>
    <string name="species_autocomplete_prompt">Type to select species</string>
    <string name="error_invalid_species_name">Please select species from dropdown list</string>
    <string name="error_species_name_empty">Species name cannot be empty</string>
    <string name="search_filter_header">Filter search results</string>
    <string name="search_filter_time_checkbox_label">Filter by time</string>
    <string name="search_filter_species_checkbox_label">Filter by species</string>
    <string name="search_filter_apply_button_label">Apply</string>
    <string name="search_filter_date_from_button_label">Change date from</string>
    <string name="search_filter_date_to_button_label">Change date to</string>
    <string name="search_filter_button_label">Set results filter</string>
    <string name="observation_creation_empty_location_error">Observation location required to save!</string>
    <string name="observation_creation_location_service_error">Connection to location service failed!</string>
    <string name="search_error_map_not_ready">Cannot search - the map is not ready!</string>
    <string name="search_error_request_failed">Search request failed!</string>
    <string name="login_progess_message">Log in in progress...</string>
    <string name="register_progress_message">Registration in progress...</string>
</resources>
