<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 wilqor
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_observations"
            android:title="@string/navigation_observations_header" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/navigation_search_header" />
        <item
            android:id="@+id/nav_votes"
            android:title="@string/navigation_votes_header" />
        <item
            android:id="@+id/nav_log_out"
            android:title="@string/log_out" />
    </group>
</menu>
