<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 wilqor
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.ObservationDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/observation_details_date"
            android:text="@string/observation_details_date_label"
            android:textSize="@dimen/recycler_view_item_header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/observation_details_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/recycler_view_item_header_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/observation_details_author_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/observation_details_author"
            android:text="@string/observation_details_author_label"
            android:textSize="@dimen/recycler_view_item_header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/observation_details_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/recycler_view_item_header_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/observation_details_species_class"
            android:text="@string/observation_details_species_class_label"
            android:textSize="@dimen/recycler_view_item_header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/observation_details_species_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/recycler_view_item_header_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/observation_details_species"
            android:text="@string/observation_details_species_label"
            android:textSize="@dimen/recycler_view_item_header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/observation_details_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/recycler_view_item_header_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/observation_details_votes_number"
            android:text="@string/observation_details_number_of_votes_label"
            android:textSize="@dimen/recycler_view_item_header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/observation_details_votes_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/recycler_view_item_header_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/observation_details_restricted_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/observation_details_restriction_switch"
            android:text="@string/observation_details_restriction_label"
            android:textSize="@dimen/recycler_view_item_header_text_size"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/observation_details_restriction_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/observation_details_cast_vote_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/observation_detais_vote_button_label" />

            <Button
                android:id="@+id/observation_details_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/observation_detais_delete_button_label" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
