<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 wilqor
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wlobs.wilqor.mobile.activity.VoteDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/details_vertical_margin"
                android:layout_marginTop="@dimen/details_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/vote_details_date"
                    android:text="@string/vote_details_date_voted"
                    android:textSize="@dimen/recycler_view_item_header_text_size" />

                <TextView
                    android:id="@+id/vote_details_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/recycler_view_item_header_text_size" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/details_vertical_margin"
                android:layout_marginTop="@dimen/details_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/vote_details_author"
                    android:text="@string/vote_details_author_label"
                    android:textSize="@dimen/recycler_view_item_header_text_size" />

                <TextView
                    android:id="@+id/vote_details_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/recycler_view_item_header_text_size" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/details_vertical_margin"
                android:layout_marginTop="@dimen/details_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/vote_details_species_class"
                    android:text="@string/vote_details_class_label"
                    android:textSize="@dimen/recycler_view_item_header_text_size" />

                <TextView
                    android:id="@+id/vote_details_species_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/recycler_view_item_header_text_size" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/details_vertical_margin"
                android:layout_marginTop="@dimen/details_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/vote_details_species_description"
                    android:text="@string/vote_details_species_label"
                    android:textSize="@dimen/recycler_view_item_header_text_size" />

                <TextView
                    android:id="@+id/vote_details_species_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/recycler_view_item_header_text_size" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/details_vertical_margin"
                android:gravity="center_horizontal|bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/vote_details_delete_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_details_delete_label" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
