<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 wilqor
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wlobs.wilqor.mobile.activity.ObservationCreationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/details_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/observation_creation_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="@dimen/recycler_view_item_header_text_size" />

                <Button
                    android:id="@+id/observation_creation_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/new_observation_date_change_button_text" />
            </LinearLayout>

            <View style="@style/Divider" />

            <fragment
                android:id="@+id/observation_creation_species_fragment"
                class="com.wlobs.wilqor.mobile.activity.SpeciesSelectionFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_species_selection" />

            <View style="@style/Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/details_vertical_margin"
                android:layout_marginTop="@dimen/details_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/observation_creation_restriction_switch"
                    android:text="@string/new_observation_restriction_label"
                    android:textSize="@dimen/recycler_view_item_header_text_size" />

                <Switch
                    android:id="@+id/observation_creation_restriction_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <Button
                    android:id="@+id/observation_creation_save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/new_observation_save_button_text" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
